L05 Float and Position/Q05 Floating Images and Quotes/style.css
body{
    width: 60em;
    margin: 0 auto;
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(238, 238, 238);
}

#title {
    text-transform: uppercase;
    font-size: 2em;
    font-weight: bold;
}

blockquote, h1, h2, h3, h4, h5, h6{
    font-family: Georgia, 'Times New Roman', Times, serif;
}

img{
    background-color: rgb(255, 255, 255);
    box-shadow: rgba(0, 0, 0, 0.25);
    padding: 1%;
    border: 2px solid black;
}

hr{
    border: 1px solid black;
    height: 0;
}

blockquote{
    box-sizing: border-box;
    font-style: italic;
    font-size: 12px;
    width: 40%;
    float: right;
    margin: 0 0 0 5%;
    padding: 0 0 3% 5%;
    border-left: 2px solid rgba(246, 246, 246, 1);
    /* vertical-align: text-top; */
}

blockquote > footer{
    float: right;
    font-size: 15px;
}

.first-image{
    float: right;
    margin-left: 1.5%;
    width: 125px;
    height: auto;
}

.second-image{
    float: left;
    margin: 0.7% 2% 0 0;
}

